[project]
name = "fastapi-grafana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

[tool.setuptools]
package-dir = {"" = "."}
